Reupload full project

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,9 @@
   </style>
 </head>
 <body>
-  <h1>Buat QR Code</h1>
+  <h1>Create QR Code</h1>
   <form method="POST">
-    <input type="text" name="data" placeholder="Masukkan teks atau tautan" required>
+    <input type="text" name="data" placeholder="Insert text or link" required>
     <button type="submit">Generate</button>
   </form>
 </body>
