--- a/templates/result.html
+++ b/templates/result.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h1>QR Code Berhasil Dibuat</h1>
+  <h1>QR Code Has Been Created</h1>
   <p><strong>Data:</strong> {{ qr_data }}</p>
   <img src="data:image/png;base64,{{ qr_img }}" alt="QR Code">
   <a href="{{ url_for('download') }}" class="button">Download QR Code</a>
